fix: removed isBlank